--- a/public/stylesheets/workouts/edit.css
+++ b/public/stylesheets/workouts/edit.css
@@ -2,11 +2,11 @@ form {
   display:grid;
 }
 
-
 form * {
   padding: 0px;
   font-size: 2rem;
 }
+
 h1 {
   font-size: 3rem;
   font-weight: bold;
@@ -19,21 +19,12 @@ label {
   margin: 30px 200px 0 0;
 }
 
-input{
+input,select{
   text-align: center;
   color: black;
   width: 50%;
   align-content: stretch;
   border: 2px solid #B6D0E2;
-  border-radius: 12px;
-}
-
-select {
-  text-align: center;
-  color: black;
-  width: 50%;
-  align-content: stretch;
-  border: 2px solid#B6D0E2;
   border-radius: 12px;
 }
 
